fix(datepicker): collapse presets on mobile

--- a/css/src/components/dateRangePicker.module.css
+++ b/css/src/components/dateRangePicker.module.css
@@ -23,6 +23,11 @@
 }
 
 @media (max-width: 576px) {
+  .DateRangePicker--left,
+  .DateRangePicker--right {
+    flex-direction: column;
+  }
+
   .DateRangePicker-input {
     padding: 0;
   }
